--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
         <div class="content columns padding-vertical">
             <div class="column column-one">
-                <img class="header__image" src="images/IVofwands.jpg" alt="IV of Wands card from the Smith-Waite tarot deck, by Pamela Colman Smith">
+                <img class="header__image" src="IVofwands.jpg" alt="IV of Wands card from the Smith-Waite tarot deck, by Pamela Colman Smith">
             </div>
             <div class="column column-two">
                 <h1 class="heading header__heading emphasis">The Mummers’ Dance</h1>
@@ -55,7 +55,7 @@
                 <p>The next year the girls rehearsed a choreography. During the following ones, more people heard of it and came to join them.</p>
             </div>
             <div class="column image">
-                <img src="images/heartsdesire.jpg" alt="Illustration for The Land of Heart's Desire, 1898 [William Butler Yeats] by Pamela Colman Smith (1878-1951)">
+                <img src="heartsdesire.jpg" alt="Illustration for The Land of Heart's Desire, 1898 [William Butler Yeats] by Pamela Colman Smith (1878-1951)">
             </div>
             <div class="column"> 
                 <p>Now the group celebrations were so large that the village's high walls barely contained them, serving merely to block their view of the woodland, the flowers, the Moon and the Sun.</p>
